[package]
name = "crank"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]


# The main library
[lib]
name = "crank"
path = "src/lib.rs"


# Used for testing the library during it's development
[[bin]]
name = "crank_dev"
path = "dev/src/main.rs"


[dependencies]

# For OpenGL bindings
# gl_generator = "0.7.0"

# For OpenGL context and window creation
glutin = "0.12.0"

# For struct size querying
memoffset = "0.1"

# For numeric traits in generics
num-traits = "0.1.41"